# XYpsa-OnDemandFS

./: .gitignore  GUI_unarchive.py  README.md  main.py  main.spec  pyproject.toml
XYpsaFormat/: README.md  XYpsaGenStream.py  XYpsaParseStream.py  xypsa.hexpat  测试用文件.7z
docs/: 需求与大纲.md
experiment/: 测速.py  读写锁调度版本_性能损失一半.7z
rust_wheels/: xypsa-0.1-cp310-abi3-win_amd64.whl
src/: gui.py  vfs.py  xypsa_generator.py
