[project]
name = "xypsa-ondemandfs"
version = "0.1.0"
description = "XYpsa虚拟动态归档器"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.2",
    "sortedcontainers>=2.4.0",
    "winfspy>=0.8.4",
]
[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
